--- a/WTO/Web.config
+++ b/WTO/Web.config
@@ -21,6 +21,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="On" defaultRedirect="~/Views/Shared/Error.cshtml">
+      <error statusCode="404" redirect="~/Views/Shared/Error.cshtml"/>
+    </customErrors>
     <authentication mode="Forms">
       <forms loginUrl="~/Login/Index" timeout="2500" />
     </authentication>
