--- a/WTO/Web.config
+++ b/WTO/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   <connectionStrings>
     <!--<add name="WTO" connectionString="Data Source=ASHVINI\ASHVINI;Initial Catalog=WTODevelopment;Integrated Security=True" />-->
-    <!--<add name="WTO" providerName="System.Data.SqlClient" connectionString="server=192.168.0.2;database=WTODevelopment;user=CHIPSOFT;password=chipsoft;connect timeout=200" />-->
-    <add name="WTO" providerName="System.Data.SqlClient" connectionString="server=103.11.85.150;database=WTODevelopment;user=Chipsoft;password=NDt6DHEj2w;connect timeout=200"/>
+    <add name="WTO" providerName="System.Data.SqlClient" connectionString="server=192.168.0.2;database=WTO;user=CHIPSOFT;password=chipsoft;connect timeout=200" />
+    <!--<add name="WTO" providerName="System.Data.SqlClient" connectionString="server=103.11.85.150;database=WTODevelopment;user=Chipsoft;password=NDt6DHEj2w;connect timeout=200"/>-->
     <!--<add name="WTO" providerName="System.Data.SqlClient" connectionString="server=103.11.85.150;database=WTO;user=Chipsoft;password=NDt6DHEj2w;connect timeout=200"/>-->
   </connectionStrings>
   <appSettings>
@@ -27,7 +27,6 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Login/Index" timeout="2500" />
     </authentication>
-    <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
