--- a/WTO/Web.config
+++ b/WTO/Web.config
@@ -9,9 +9,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="WTO" connectionString="Data Source=ASHVINI\ASHVINI;Initial Catalog=WTO;Integrated Security=True" />
+    <!--<add name="WTO" connectionString="Data Source=ASHVINI\ASHVINI;Initial Catalog=WTO;Integrated Security=True" />-->
     <!--<add name="WTO" providerName="System.Data.SqlClient" connectionString="server=192.168.0.2;database=WTO;user=CHIPSOFT;password=chipsoft;connect timeout=200" />-->
-    <!--<add name="WTO" providerName="System.Data.SqlClient" connectionString="server=103.11.85.150;database=WTODevelopment;user=Chipsoft;password=NDt6DHEj2w;connect timeout=200"/>-->
+    <add name="WTO" providerName="System.Data.SqlClient" connectionString="server=103.11.85.150;database=WTODevelopment;user=Chipsoft;password=NDt6DHEj2w;connect timeout=200"/>
     <!--<add name="WTO" providerName="System.Data.SqlClient" connectionString="server=103.11.85.150;database=WTO;user=Chipsoft;password=NDt6DHEj2w;connect timeout=200"/>-->
   </connectionStrings>
   <appSettings>
