--- a/WTO/Web.config
+++ b/WTO/Web.config
@@ -21,8 +21,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <customErrors mode="On" defaultRedirect="~/Views/Shared/Error.cshtml">
-      <error statusCode="404" redirect="~/Views/Shared/Error.cshtml"/>
+    <customErrors mode="On" defaultRedirect="~/Views/GlobalError/Index.cshtml">
+      <error statusCode="404" redirect="~/Views/GlobalError/Index.cshtml"/>
     </customErrors>
     <authentication mode="Forms">
       <forms loginUrl="~/Login/Index" timeout="2500" />
