--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,13 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+
+# ignore an entire directory
+/Attachments/
+/Properties/PublishProfiles/
+
+# ignore a single file
+Web.config
+Web.Debug.config
+Web.Release.config
+XceptionLog.txt
