--- a/WTO/Web.config
+++ b/WTO/Web.config
@@ -10,6 +10,7 @@
     <sectionGroup name="mailSettings">
       <section name="smtp_CII" type="System.Net.Configuration.SmtpSection" />
       <section name="smtp_Teamup" type="System.Net.Configuration.SmtpSection" />
+      <section name="smtp_WTO" type="System.Net.Configuration.SmtpSection" />
     </sectionGroup>
   </configSections>
   <connectionStrings>
@@ -84,11 +85,14 @@
     <smtp_CII deliveryMethod="Network" from="cii@mycii.in">
       <network host="199.193.112.117" userName="cii@mycii.in" password="Vi89*cT9" port="587" defaultCredentials="false"/>
     </smtp_CII>
-    <smtp_Teamup deliveryMethod="Network" from="cii@mycii.in">
+    <!--<smtp_Teamup deliveryMethod="Network" from="cii@mycii.in">
       <network host="199.193.112.117" userName="cii@mycii.in" password="Vi89*cT9" port="587" defaultCredentials="false"/>
-    </smtp_Teamup>
-    <!--<smtp_Teamup deliveryMethod="Network" from="teamgym24@gmail.com">
-      <network host="smtp.gmail.com" userName="teamgym24@gmail.com" password="raginilal" port="587" defaultCredentials="false" />
     </smtp_Teamup>-->
+    <smtp_Teamup deliveryMethod="Network" from="teamgym24@gmail.com">
+      <network host="smtp.gmail.com" userName="teamgym24@gmail.com" password="raginilal" port="587" defaultCredentials="false" />
+    </smtp_Teamup>
+    <smtp_WTO deliveryMethod="Network" from="teamgym24@gmail.com">
+      <network host="smtp.gmail.com" userName="teamgym24@gmail.com" password="raginilal" port="587" defaultCredentials="false" />
+    </smtp_WTO>
   </mailSettings>
 </configuration>
