--- a/WTO/Web.config
+++ b/WTO/Web.config
@@ -91,8 +91,8 @@
     <smtp_Teamup deliveryMethod="Network" from="teamgym24@gmail.com">
       <network host="smtp.gmail.com" userName="teamgym24@gmail.com" password="raginilal" port="587" defaultCredentials="false" />
     </smtp_Teamup>
-    <smtp_WTO deliveryMethod="Network" from="teamgym24@gmail.com">
-      <network host="smtp.gmail.com" userName="teamgym24@gmail.com" password="raginilal" port="587" defaultCredentials="false" />
+    <smtp_WTO deliveryMethod="Network" from="wto.chipsoftindia@gmail.com">
+      <network host="smtp.gmail.com" userName="wto.chipsoftindia@gmail.com" password="chipsoftindia" port="587" defaultCredentials="false" />
     </smtp_WTO>
   </mailSettings>
 </configuration>
