Changes by Ashvini on 16 July for multiple action cases on Meeting pages, And issue in meeting summary by shweta

--- a/WTO/Web.config
+++ b/WTO/Web.config
@@ -14,8 +14,8 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <!--<add name="WTO" connectionString="Data Source=ASHVINI\ASHVINI;Initial Catalog=WTODevelopment;Integrated Security=True" />-->
-    <add name="WTO" providerName="System.Data.SqlClient" connectionString="server=192.168.0.2;database=WTODevelopment;user=CHIPSOFT;password=chipsoft;connect timeout=200" />
+    <add name="WTO" connectionString="Data Source=ASHVINI\ASHVINI;Initial Catalog=WTODevelopment;Integrated Security=True" />
+    <!--<add name="WTO" providerName="System.Data.SqlClient" connectionString="server=192.168.0.2;database=WTODevelopment;user=CHIPSOFT;password=chipsoft;connect timeout=200" />-->
     <!--<add name="WTO" providerName="System.Data.SqlClient" connectionString="server=103.11.85.150;database=WTODevelopment;user=Chipsoft;password=NDt6DHEj2w;connect timeout=200"/>-->
     <!--<add name="WTO" providerName="System.Data.SqlClient" connectionString="server=103.11.85.150;database=WTO;user=Chipsoft;password=NDt6DHEj2w;connect timeout=200"/>-->
   </connectionStrings>
@@ -85,9 +85,6 @@
     <smtp_CII deliveryMethod="Network" from="cii@mycii.in">
       <network host="199.193.112.117" userName="cii@mycii.in" password="Vi89*cT9" port="587" defaultCredentials="false"/>
     </smtp_CII>
-    <!--<smtp_Teamup deliveryMethod="Network" from="cii@mycii.in">
-      <network host="199.193.112.117" userName="cii@mycii.in" password="Vi89*cT9" port="587" defaultCredentials="false"/>
-    </smtp_Teamup>-->
     <smtp_Teamup deliveryMethod="Network" from="teamgym24@gmail.com">
       <network host="smtp.gmail.com" userName="teamgym24@gmail.com" password="raginilal" port="587" defaultCredentials="false" />
     </smtp_Teamup>
